crates/math-core/tests/snapshots/conversion_test__begingroup_endgroup.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x^\\begingroup ab\\endgroup"
---
<math>
    <msup>
        <mi>x</mi>
        <mrow>
            <mi>a</mi>
            <mi>b</mi>
        </mrow>
    </msup>
</math>
