crates/math-core/tests/snapshots/conversion_test__bf.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "{\\bf x}"
---
<math>
    <mi>𝐱</mi>
</math>
