crates/math-core/tests/snapshots/conversion_test__bf_subscript.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "{\\bf_2 x}"
---
<math>
    <mrow>
        <msub>
            <mrow>
            </mrow>
            <mi>𝟐</mi>
        </msub>
        <mi>𝐱</mi>
    </mrow>
</math>
