crates/math-core/tests/snapshots/conversion_test__bf_x_subscript.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "{x\\bf_2 x}"
---
<math>
    <mrow>
        <mi>x</mi>
        <msub>
            <mrow>
            </mrow>
            <mi>𝟐</mi>
        </msub>
        <mi>𝐱</mi>
    </mrow>
</math>
