crates/math-core/tests/snapshots/conversion_test__big_braket.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\Braket{\\phi|\\dfrac{\\partial^2}{\\partial t^2}|\\psi}"
---
<math>
    <mrow>
        <mo>⟨</mo>
        <mi>ϕ</mi>
        <mspace width="0.16666667em"/>
        <mo stretchy="true" lspace="0" rspace="0">|</mo>
        <mspace width="0.16666667em"/>
        <mfrac displaystyle="true">
            <msup>
                <mi>∂</mi>
                <mn>2</mn>
            </msup>
            <mrow>
                <mi>∂</mi>
                <msup>
                    <mi>t</mi>
                    <mn>2</mn>
                </msup>
            </mrow>
        </mfrac>
        <mspace width="0.16666667em"/>
        <mo stretchy="true" lspace="0" rspace="0">|</mo>
        <mspace width="0.16666667em"/>
        <mi>ψ</mi>
        <mo>⟩</mo>
    </mrow>
</math>
