crates/math-core/tests/snapshots/conversion_test__big_braket_class_lookahead.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\Braket{=|x}"
---
<math>
    <mrow>
        <mo>⟨</mo>
        <mo lspace="0" rspace="0">=</mo>
        <mo stretchy="true" form="infix" lspace="0.1667em" rspace="0.1667em">|</mo>
        <mi>x</mi>
        <mo>⟩</mo>
    </mrow>
</math>
