crates/math-core/tests/snapshots/conversion_test__big_pipe.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\big| x \\big|"
---
<math>
    <mo stretchy="true" symmetric="true" lspace="0" rspace="0" minsize="1.2em" maxsize="1.2em">|</mo>
    <mi>x</mi>
    <mo stretchy="true" symmetric="true" lspace="0" rspace="0" minsize="1.2em" maxsize="1.2em">|</mo>
</math>
