crates/math-core/tests/snapshots/conversion_test__big_set.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\Set{ x | x<\\dfrac 1 2 }"
---
<math>
    <mrow>
        <mo>{</mo>
        <mspace width="0.22222222em"/>
        <mi>x</mi>
        <mspace width="0.2777778em"/>
        <mo stretchy="true" lspace="0" rspace="0">|</mo>
        <mspace width="0.2777778em"/>
        <mi>x</mi>
        <mo>&lt;</mo>
        <mfrac displaystyle="true">
            <mn>1</mn>
            <mn>2</mn>
        </mfrac>
        <mspace width="0.22222222em"/>
        <mo>}</mo>
    </mrow>
</math>
