crates/math-core/tests/snapshots/conversion_test__big_set_class_lookahead.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\Set{ = | x }"
---
<math>
    <mrow>
        <mo>{</mo>
        <mspace width="0.22222222em"/>
        <mo lspace="0" rspace="0">=</mo>
        <mo stretchy="true" form="infix">|</mo>
        <mi>x</mi>
        <mspace width="0.22222222em"/>
        <mo>}</mo>
    </mrow>
</math>
